# cc-course-2024

./: .gitignore  README.md
lab_001/: Cargo.toml
lab_001/src/: determinization.rs  dfs.rs  errors.rs  lib.rs  minimization.rs  syntaxtree.rs  thompson.rs  treenode.rs
lab_001/tests/: test_finite_automata.rs  test_printable.rs
lab_002/: Cargo.toml
lab_002/src/: grammar.rs  main.rs
lab_003/src/: __init__.py  cyk_parser.py  grammar_converter.py
lab_003/src/examples/: not_simple_sum.txt  simple_sum.txt
lab_003/src/grammars/: lab_grammar.txt
lab_003/src/parsers/: earley.py
lab_003_new/: README.md  main.py  parse_error.py  pascal_lexer.py  pascal_parser.py
lab_003_new/examples/: example_001.pas  example_002.pas  example_003.pas  example_004.pas  example_005.pas
lab_003_new/grammars/: pascal.g
lab_004/: main.py  pascal_ast.py  pascal_lexer.py  pascal_parser.py
lab_004/examples/: example_001.pas  example_002.pas  example_003.pas  example_005.pas
lab_004/grammars/: pascal.g
pascal_compiler/PascalCompiler/: CMakeLists.txt  README.md  exceptions.h  main.cpp  visitor.cpp  visitor.h
pascal_compiler/PascalCompiler/grammar/: Pascal.g4
pascal_compiler/SimpleCompiler/: Program.cs  README.md  SimpleCodeEmmiter.cs  SimpleCompiler.csproj  SimpleVisitor.cs
pascal_compiler/SimpleCompiler/Content/: Simple.g4  test.simple
