[package]
name = "regex-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "bin/matcher.rs"
name = "matcher"

[dependencies]
assert_cmd = "2.0.14"
colored = "2.1.0"
cursive = "0.20.0"
nom = "7.1.3"
predicates = "3.1.0"
regex = "1.10.4"
